# armadillin-model

./: all_lineages.txt  mask_small.json  pyproject.toml  setup.cfg
.github/workflows/: release.yaml
src/armadillin-model/trained_model/: all_lineages.txt  mask_small.json
